--- a/Foodie/index.html
+++ b/Foodie/index.html
@@ -78,7 +78,7 @@
         <div class="card-body d-flex flex-column">
           <h3>Food Service</h3>
           <p class="card-text flex-grow-1">
-Experience fine dining at the comfort of your home. All our orders are carefully packed and arranged to give you the nothing less than perfect .          </p>
+Experience fine dining at the comfort of your home. All our orders are carefully packed and arranged to give you the nothing less than perfect .</p>
         </div>
       </div>
     </div>
@@ -109,17 +109,14 @@ Experience fine dining at the comfort of your home. All our orders are carefully
   </div>
 </div>
 
-
-    <h1 class="a p-2" id="def">Explore Menu</h1>
-
-
+<h1 class="a p-2" id="def">Explore Menu</h1>
 <div class="row g-3 align-items-center m-2">
   <div class="col-12 col-sm-6 col-md-4 col-lg-3">
       <div class="card h-100 align-items-center">
   <img class="ig p-2" src="https://img.freepik.com/free-photo/side-view-pilaf-with-stewed-beef-meat-plate_141793-5057.jpg?ga=GA1.1.237841452.1729168047&semt=ais_siglip" class="card-img-top" alt="...">
   <div class="card-body">
     <h3 class="text-center">Chicken Biryani</h3>
-    <a href="https://www.freshmenu.com/" class="link">View More</a>
+    <a href="" class="link">View More</a>
   </div>
 </div>
   </div>
@@ -128,7 +125,7 @@ Experience fine dining at the comfort of your home. All our orders are carefully
   <img class="ig p-2" src="https://img.freepik.com/free-photo/high-angle-shot-delicious-hot-spicy-dish-called-drums-heaven-table_181624-50861.jpg?ga=GA1.1.237841452.1729168047&semt=ais_hybrid" class="card-img-top" alt="...">
   <div class="card-body">
     <h3 class="text-center">Chicken Lollipop</h3>
-    <a href="https://www.freshmenu.com/" class="link">View More</a>
+    <a href="" class="link">View More</a>
   </div>
 </div>
 </div>
@@ -138,7 +135,7 @@ Experience fine dining at the comfort of your home. All our orders are carefully
   <img class="ig p-2" src="https://img.freepik.com/free-photo/side-view-baked-chicken-with-cucumber-lemon-seasoning-bread-table_141793-4757.jpg?ga=GA1.1.237841452.1729168047&semt=ais_hybrid" class="card-img-top" alt="...">
   <div class="card-body">
     <h3 class="text-center">Chicken Tandoori</h3>
-    <a href="https://www.freshmenu.com/" class="link">View More</a>
+    <a href="" class="link">View More</a>
   </div>
 </div>
   </div>
@@ -148,7 +145,7 @@ Experience fine dining at the comfort of your home. All our orders are carefully
   <img class="ig p-2" src="https://img.freepik.com/premium-photo/tawa-pulao-pulav-pilaf-pilau-is-indian-street-food-made-using-basmati-rice-vegetables-spices-selective-focus_466689-70823.jpg?ga=GA1.1.237841452.1729168047&semt=ais_hybrid" class="card-img-top" alt="...">
   <div class="card-body">
     <h3 class="text-center">Vegetable Rice</h3>
-    <a href="https://www.freshmenu.com/" class="link">View More</a>  
+    <a href="" class="link">View More</a>  
   </div>
 </div>
 </div>
@@ -158,7 +155,7 @@ Experience fine dining at the comfort of your home. All our orders are carefully
   <img class="ig p-2" src="https://img.freepik.com/free-photo/front-close-view-delicious-fried-fishes-lemon-slices-brown-plate-pepper-mix-colors-table-with-free-space_179666-18175.jpg?ga=GA1.1.237841452.1729168047&semt=ais_siglip" class="card-img-top" alt="...">
   <div class="card-body">
     <h3 class="text-center">Fish Fry</h3>
-    <a href="https://www.freshmenu.com/" class="link">View More</a>
+    <a href="" class="link">View More</a>
   </div>
 </div>
   </div>
@@ -167,7 +164,7 @@ Experience fine dining at the comfort of your home. All our orders are carefully
   <img class="ig p-2" src="https://img.freepik.com/premium-photo/fish-curry-seer-fish-curry-traditional-indian-fish-curry-kerala-special-dish-using-coconut-arranged-white-bowl-garnished-with-curry-leaves-malabar-tamarind-white-textured-background_527904-2016.jpg?ga=GA1.1.237841452.1729168047&semt=ais_siglip" class="card-img-top" alt="...">
   <div class="card-body">
     <h3 class="text-center">Fish Curry</h3>
-    <a href="https://www.freshmenu.com/" class="link">View More</a>
+    <a href="" class="link">View More</a>
   </div>
 </div>
 </div>
@@ -176,7 +173,7 @@ Experience fine dining at the comfort of your home. All our orders are carefully
   <img class="ig p-2" src="https://tse4.mm.bing.net/th/id/OIP.tmwtxbCtatts1HorSeiu1wHaE8?rs=1&pid=ImgDetMain&o=7&rm=3" class="card-img-top" alt="...">
   <div class="card-body">
     <h3 class="text-center">Mutton Curry</h3>
-    <a href="https://www.freshmenu.com/" class="link">View More</a>
+    <a href="" class="link">View More</a>
   </div>
 </div>
   </div>
@@ -185,7 +182,7 @@ Experience fine dining at the comfort of your home. All our orders are carefully
   <img class="ig p-2" src="https://th.bing.com/th/id/OIP.m94FMx2_Ecy8rPJpkyu83gHaE8?w=272&h=181&c=7&r=0&o=7&dpr=1.3&pid=1.7&rm=3" class="card-img-top" alt="...">
   <div class="card-body">
     <h3 class="text-center">Mutton Fry</h3>
-    <a href="https://www.freshmenu.com/" class="link">View More</a>
+    <a href="" class="link">View More</a>
   </div>
 </div>
 </div>
